// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commit: updates fixed versions 1`] = `
"v1.0.1
"
`;

exports[`commit: updates independent versions 1`] = `
"Publish

 - package-1@2.0.0
 - package-2@3.0.0
 - package-3@4.0.0
 - package-4@5.0.0
"
`;

exports[`packages: updates fixed versions 1`] = `
Array [
  Object {
    "name": "package-1",
    "version": "1.0.1",
  },
  Object {
    "dependencies": Object {
      "package-1": "^1.0.1",
    },
    "name": "package-2",
    "version": "1.0.1",
  },
  Object {
    "devDependencies": Object {
      "package-2": "^1.0.1",
    },
    "name": "package-3",
    "version": "1.0.1",
  },
  Object {
    "dependencies": Object {
      "package-1": "^0.0.0",
    },
    "name": "package-4",
    "version": "1.0.1",
  },
  Object {
    "dependencies": Object {
      "package-1": "^1.0.1",
    },
    "name": "package-5",
    "private": true,
    "version": "1.0.1",
  },
]
`;

exports[`packages: updates independent versions 1`] = `
Array [
  Object {
    "name": "package-1",
    "version": "2.0.0",
  },
  Object {
    "dependencies": Object {
      "package-1": "^2.0.0",
    },
    "name": "package-2",
    "version": "3.0.0",
  },
  Object {
    "devDependencies": Object {
      "package-2": "^3.0.0",
    },
    "name": "package-3",
    "version": "4.0.0",
  },
  Object {
    "dependencies": Object {
      "package-1": "^0.0.0",
    },
    "name": "package-4",
    "version": "5.0.0",
  },
]
`;

exports[`stdout: updates fixed versions 1`] = `
"Lerna __TEST_VERSION__
Current version: 1.0.0
Checking for updated packages...
No tags found! Comparing with initial commit.

Changes:
- package-1: 1.0.0 => 1.0.1
- package-2: 1.0.0 => 1.0.1
- package-3: 1.0.0 => 1.0.1
- package-4: 1.0.0 => 1.0.1
- package-5: 1.0.0 => 1.0.1 (private)

Assuming confirmation."
`;

exports[`stdout: updates independent versions 1`] = `
"Lerna __TEST_VERSION__
Independent Versioning Mode
Checking for updated packages...
No tags found! Comparing with initial commit.

Changes:
- package-1: 1.0.0 => 2.0.0
- package-2: 2.0.0 => 3.0.0
- package-3: 3.0.0 => 4.0.0
- package-4: 4.0.0 => 5.0.0

Assuming confirmation."
`;

exports[`stdout: validates cd-version 1`] = `
[Error: Command failed: /home/noherczeg/work/blackbelt/lerna/bin/lerna.js publish --skip-npm --cd-version=nope --yes
/home/noherczeg/work/blackbelt/lerna/bin/lerna.js publish

Global Options:
  --loglevel                       What level of logs to report.  [string] [default: "info"]
  --concurrency                    How many threads to use if lerna parallelises the tasks.  [number] [default: 4]
  --scope                          Restricts the scope to package names matching the given glob.
                                   (Only for 'run', 'exec', 'clean', 'ls', and 'bootstrap' commands)  [string]
  --ignore                         Ignore packages with names matching the given glob.
                                   (Only for 'run', 'exec', 'clean', 'ls', and 'bootstrap' commands)  [string]
  --include-filtered-dependencies  Include all transitive dependencies when running a command, regardless of --scope or --ignore.
  --registry                       Use the specified registry for all npm client operations.  [string]
  --sort                           Sort packages topologically (all dependencies before dependents)  [boolean] [default: true]
  -h, --help                       Show help  [boolean]
  -v, --version                    Show version number  [boolean]

Options:
  --canary, -c            Publish packages after every successful merge using the sha as part of the tag.
  --cd-version            Skip the version selection prompt and increment semver 'major', 'minor', or 'patch'.  [string] [choices: "major", "minor", "patch"]
  --conventional-commits  Use angular conventional-commit format to determine version bump and generate CHANGELOG.
  --exact                 Specify cross-dependency version numbers exactly rather than with a caret (^).
  --git-remote            Push git changes to the specified remote instead of 'origin'.  [string] [default: origin]
  --yes                   Skip all confirmation prompts.
  --message, -m           Use a custom commit message when creating the publish commit.  [string]
  --npm-tag               Publish packages with the specified npm dist-tag  [string]
  --repo-version          Specify repo version to publish.  [string]
  --skip-git              Skip commiting, tagging, and pushing git changes.
  --skip-npm              Stop before actually publishing change to npm.
  --skip-temp-tag         Do not create a temporary tag while publishing.

Invalid values:
  Argument: cd-version, Given: "nope", Choices: "major", "minor", "patch"
]
`;
